# newanti

./: .commit-msg.tmp  .commit-msg.txt  .copilotignore  .deployment  .dockerignore  .env.deploy.example  .env.docker.example  .env.example  .env.local.example  .gitignore  .lintstagedrc.js  .prettierignore  .prettierrc  .releaserc.json  00_START_HERE.md  3D_STRUCTURAL_SOLVER_COMPLETE.md  APR3_STAGING_TEST_EXECUTION_PLAN.md  AZURE_BACKEND_TROUBLESHOOTING.md  AZURE_CORS_FIX.md  AZURE_DEPLOY_AND_CONFIG.sh  BEAMLAB_COMPLETE_FEATURES_AND_BUTTONS.md  BEAMLAB_DOMAIN_QUICK_START.md  BEAMLAB_GAP_ANALYSIS_REPORT.md  BHEEMLA_DOMAIN_QUICK_START.md  BeamLab_Ultimate_Textbook.md  CEO_CRITICAL_ANALYSIS_REPORT_2026.md  CHANGELOG.md  CLERK_KEYS_SETUP.sh  CODE_QUALITY_IMPROVEMENTS.md  COMMIT_PLAN_BATCH_C.md  COMPLETE_FILE_INVENTORY.md  COMPLETE_STRUCTURAL_CAPABILITY.md  COMPREHENSIVE_UI_AUDIT.md  CONTRIBUTING.md  CORS_CONFIGURATION.md  CRITICAL_IMPACT_ASSESSMENT_2026.md  DASHBOARD_FEATURES_COMPLETE.md  DEBUG_REPORT.md  DELIVERABLES_HANDOFF.md  DEPLOYMENT.md  (+182 more)
apps/backend-rust/: CRITICAL_INDUSTRY_AUDIT.md  Cargo.toml  DEEP_CODE_AUDIT.md  GOD_FILE_REFACTOR_PLAN_2026-04-01.md  STAAD_COMPARISON_AUDIT.md  STAAD_PRO_CRITICAL_AUDIT_2026.md  build_error.txt  output.json  package.json  test_input.json
apps/backend-rust/pkg/: backend_rust.d.ts  backend_rust.js  backend_rust_bg.wasm  backend_rust_bg.wasm.d.ts  package.json
apps/backend-rust/src/: adaptive_facades.rs  advanced_composite.rs  advanced_composite_design.rs  advanced_concrete.rs  advanced_connection_design.rs  advanced_dynamics.rs  advanced_foundation.rs  advanced_foundation_design.rs  advanced_infrastructure.rs  advanced_loads.rs  advanced_materials.rs  advanced_matrix_decompositions.rs  advanced_mcmc.rs  advanced_numerical_differentiation.rs  advanced_numerical_methods.rs  advanced_numerical_ode.rs  advanced_rc_design.rs  advanced_reliability.rs  advanced_reliability.rs.bkp  advanced_sampling.rs  advanced_seismic_analysis.rs  advanced_seismic_features.rs  ai_architect.rs  ai_guardrails.rs  aluminum_design.rs  api_integration.rs  arch_bridge.rs  as_built_analysis.rs  automated_code_checking.rs  bayesian_inference.rs  beam_design.rs  beam_elements_enhanced.rs  benchmark_tests.rs  biaxial_column_design.rs  bim_ifc_complete.rs  bim_integration.rs  blast_analysis.rs  blast_loading.rs  blast_resistant.rs  boundary_conditions.rs  (+245 more)
apps/backend-rust/src/advanced_rc_design/: mod.rs  punching_shear.rs  torsion.rs
apps/backend-rust/src/civil_engineering/: benchmarks.rs  core.rs  error.rs  geotechnical.rs  gpu_compute.wgsl  hydraulics.rs  lightweight_formats.rs  logging.rs  numerical.rs  rendering_wasm.rs  simd_optimized.rs  structural.rs  surveying.rs  transportation.rs  validation.rs  wasm_bindings.rs
apps/backend-rust/src/industry_complete_parity/: fiber_section.rs  hex20_element.rs  plastic_hinge.rs
apps/backend-rust/src/industry_parity/: solver_ordering.rs
apps/backend-rust/src/solver_3d/: analysis.rs  analysis_core.rs  assembly.rs  boundary_conditions.rs  element.rs  loads.rs  mod.rs  node.rs  results.rs  solver.rs  types.rs
apps/backend-rust/src/solver_3d/types/: base.rs  elements.rs  mod.rs  results.rs
apps/backend-rust/target_chat_check/debug/.fingerprint/amd-6ee47c5524b629f8/: lib-amd  lib-amd.json
apps/backend-rust/target_chat_check/debug/.fingerprint/approx-c04e13fa290fe492/: lib-approx.json
apps/backend-rust/target_chat_check/debug/.fingerprint/autocfg-e2e21eab783460c2/: lib-autocfg
apps/backend-rust/target_chat_check/debug/.fingerprint/bumpalo-074e47f4800c60f5/: lib-bumpalo  lib-bumpalo.json
apps/backend-rust/target_chat_check/debug/.fingerprint/clarabel-fc487a6fab2c22ff/: lib-clarabel.json
apps/backend-rust/target_chat_check/debug/.fingerprint/darling-4d1c9e27c3eb5cfc/: lib-darling  lib-darling.json
apps/backend-rust/target_chat_check/debug/.fingerprint/darling_core-50599f459f95f1af/: lib-darling_core.json
apps/backend-rust/target_chat_check/debug/.fingerprint/darling_macro-aedec034d2b98e49/: lib-darling_macro.json
apps/backend-rust/tests/: nafems_detailed_report.rs  nafems_real_benchmarks.rs
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: main.rs
apps/rust-api/: .env.example  .github-trigger  Cargo.toml  Dockerfile  INTEGRATION_TESTS_COMPLETE.md  PHASE_5_RUST_COMPLETE.md  README.md  build.rs  build.sh
apps/rust-api/.github/: copilot-instructions.md
apps/rust-api/examples/: burj_khalifa.rs  burj_simple.rs
apps/rust-api/src/: cache.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  middleware.rs  models.rs
apps/rust-api/src/design_codes/: aci_318.rs  aisc_360.rs  base_plate.rs  bearing_capacity.rs  composite_beam.rs  composite_beam.rs.bak  ductile_detailing.rs  earth_pressure.rs  eurocode2.rs  eurocode3.rs  is_1893.rs  is_456.rs  is_800.rs  is_875.rs  liquefaction.rs  mod.rs  nds_2018.rs  pile_capacity.rs  retaining_wall.rs  section_wise.rs  seismic_earth_pressure.rs  serviceability.rs  settlement.rs  slope_stability.rs  spt_correlations.rs
apps/rust-api/src/design_codes/is_456/: shear.rs  traits.rs
apps/rust-api/src/handlers/: advanced.rs  advanced_analysis.rs  advanced_pdelta.rs  analysis.rs  design.rs  health.rs  jobs.rs  metrics.rs  mod.rs  openapi.rs  optimization.rs  report.rs  sections.rs  structures.rs  templates.rs
apps/rust-api/src/handlers/design/: batch.rs  is1893_875.rs  is456.rs  section_wise.rs
apps/rust-api/src/middleware/: mod.rs  performance.rs  rate_limit.rs
apps/rust-api/src/optimization/: fsd_engine.rs  mod.rs
apps/rust-api/src/solver/: cable.rs  dynamics.rs  elements.rs  gpu_solver.rs  job_queue.rs  load_combinations.rs  mod.rs  pdelta.rs  post_processor.rs  section_database.rs  seismic.rs  sparse_solver.rs  ws_progress.rs
apps/rust-api/src/solver/load_combinations/: compute.rs  generator.rs  types.rs
apps/rust-api/templates/: report_header.html
apps/rust-api/tests/: cable_tests.rs  dynamics_tests.rs  is_456_tests.rs  pdelta_tests.rs  seismic_tests.rs  solver_regression.rs  solver_tests.rs  sparse_solver_benchmarks.rs
(+4025 files in other folders)
