[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"
authors = ["Civil Engineering Team"]
description = "High-performance civil engineering computation engine with WASM support"
license = "MIT"
repository = "https://github.com/your-org/civil-engineering-rust"
keywords = ["structural-analysis", "civil-engineering", "wasm", "fem", "finite-element"]
categories = ["science", "simulation", "wasm", "mathematics"]
readme = "README.md"
rust-version = "1.75"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = true

[features]
default = ["wasm"]
wasm = ["wasm-bindgen", "console_error_panic_hook", "js-sys", "wasm-bindgen-futures", "web-sys", "serde-wasm-bindgen"]
benchmarks = []
validation = []
logging = []
full = ["benchmarks", "validation", "logging"]

[dependencies]
# Core serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# WASM support (optional, enabled by default)
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

# Linear algebra
nalgebra = { version = "0.33", features = ["serde-serialize"] }
nalgebra-sparse = { version = "0.10", features = ["serde-serialize"] }

# Graph algorithms (for structural topology)
petgraph = "0.6"

# Optimization (for structural optimization)
clarabel = "0.5"

# Unique identifiers
uuid = { version = "1.0", features = ["v4", "js"] }
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  "Document",
  "Window",
  "Element",
  "HtmlCanvasElement",
  "Performance",
  "console"
]

[dev-dependencies]
# Property-based testing
# proptest = "1.4"

# Criterion for benchmarks (native only)
# criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = "none"

[profile.bench]
inherits = "release"
debug = true

# WASM-specific optimizations
[profile.release.package."*"]
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = false  # Disabled due to wasm-opt errors

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

