[package]
name = "beamlab-rust-api"
version = "2.1.0"
edition = "2021"
authors = ["BeamLab Team"]
description = "High-performance Rust backend for BeamLab structural analysis"
license = "MIT"

[lib]
name = "rust_api"
path = "src/lib.rs"

[[bin]]
name = "beamlab-rust-api"
path = "src/main.rs"

[dependencies]
# Web framework - Axum (fastest async web framework)
axum = { version = "0.7", features = ["macros", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }

# Async runtime - Tokio
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }

# HTTP/Web
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "compression-br", "compression-deflate", "limit"] }
hyper = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database - MongoDB
mongodb = { version = "2.8", features = ["tokio-runtime"] }
bson = { version = "2.9", features = ["chrono-0_4"] }

# Linear algebra for structural analysis
nalgebra = { version = "0.32", features = ["serde-serialize"] }
nalgebra-sparse = "0.9"

# Parallel processing
rayon = "1.8"
crossbeam = "0.8"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Authentication (JWT)
jsonwebtoken = "9.2"

# Password hashing
argon2 = "0.5"

# Rate limiting
governor = "0.6"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Async traits
async-trait = "0.1"

# Futures utilities
futures = "0.3"

# CPU count for worker pool
num_cpus = "1.16"

# In-memory caching for analysis results
moka = { version = "0.12", features = ["future"] }

# Hashing for cache keys
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
lto = "thin"
