[package]
name = "beamlab-desktop"
version = "1.0.0"
description = "BeamLab Ultimate - Desktop Structural Analysis Application"
authors = ["BeamLab Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
